# nicegeo

./: .gitignore  .ocamlformat  CONTRIBUTING.md  CONTRIBUTORS  METATHEORY.md  README.md  check_parens.py  deps.py  diff.patch  dune-project  euclib.txt  euclib_test.txt  fail.txt  mvp.md  nicegeo.opam  nicegeo_error_demo.txt  proof.ncg  proof.txt  prop2.ncg  prop2.txt  test.txt
Error_msgs/: Error.ml  Error.mli  Kernel_exn_format.ml  Kernel_to_elab.ml
_build/: .db  .digest-db  log
automation/: dune  fm_elim.ml  fm_elim.mli  measure.ml  measure.mli  measure_norm.ml  measure_norm.mli  simpterm.ml  simpterm.mli  smt.ml  smt.mli  tactic_error_messages.ml  tactic_error_messages.mli  tactics.ml  tactics.mli
demo-files/: unknown_name_demo.ncg
dune.lock/: lock.dune  ocaml-version.4.0.4.pkg
elab/: Error.ml  Error.mli  convert.ml  convert.mli  decl.ml  decl.mli  directives.ml  directives.mli  dune  elab.ml  env.txt  error.ml  error.mli  interface.ml  interface.mli  kernel_pretty.ml  kernel_pretty.mli  lexer.ml  lexer.mll  nice_messages.ml  nice_messages.mli  parser.mly  pretty.ml  pretty.mli  proofstate.ml  reduce.ml  reduce.mli  statement.ml  statement.mli  tactic.ml  tactic.mli  tactics.ml  tactics.mli  term.ml  term.mli  typecheck.ml  typecheck.mli  types.ml  types.mli
env/: dune  env.txt  main.ml
euclib/: euclib.ncg  euclib_test.ncg  euclib_test.txt  euclib_test_error.ncg  euclib_test_error.txt
ide/: .gitignore  .vscodeignore  DEV.md  LICENSE  README.md  USAGE.md  esbuild.config.mjs  language-configuration.json  nicegeo-ide-0.1.0.vsix  nicegeo-ide-0.2.0.vsix  (+4 more)
(+170 files in other folders)
